--- a/web/css/cover.css
+++ b/web/css/cover.css
@@ -1,7 +1,8 @@
 body, html {
   height: 100%;
   width: 100%;
-  margin: 0px; }
+  margin: 0px;
+  background-color: black; }
 
 .scrolling-wrapper {
   display: flex;
