--- a/web/css/cover.css
+++ b/web/css/cover.css
@@ -21,3 +21,16 @@ body, html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover; }
+
+#debug {
+  display: block;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 9999;
+  font-size: 13px;
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+  text-align: right;
+  border-radius: 5px;
+  border: 1px white solid;
+  padding: 3px; }
