--- a/sass/cover.scss
+++ b/sass/cover.scss
@@ -37,6 +37,8 @@ body, html{
 #debug {
     display: block;
     position:fixed;
+    background-color: #1c2324;
+    color: white;
     top:10px; right:10px;
     z-index: 9999;
     font-size: 13px;
