--- a/sass/cover.scss
+++ b/sass/cover.scss
@@ -39,9 +39,9 @@ body, html{
     position:fixed;
     background-color: #1c2324;
     color: white;
-    top:10px; right:10px;
+    bottom:10px; right:10px;
     z-index: 9999;
-    font-size: 13px;
+    font-size: 12px;
     font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
     text-align: right;
     border-radius: 5px;
