--- a/sass/cover.scss
+++ b/sass/cover.scss
@@ -8,6 +8,7 @@ body, html{
 
 .scrolling-wrapper {
     display: flex;
+    position: relative;
     height:100vh;
     flex-wrap: nowrap;
     overflow-x: auto;
