--- a/web/css/cover.css
+++ b/web/css/cover.css
@@ -6,6 +6,7 @@ body, html {
 
 .scrolling-wrapper {
   display: flex;
+  position: relative;
   height: 100vh;
   flex-wrap: nowrap;
   overflow-x: auto;
